<resources>
    <string name="app_name">My Application monday 2</string>
    <string name="butonnnn">BUTONNNN</string>
    <string name="button">Button</string>
    <string name="buttonn">Buttonn</string>
    <string name="buttonnn">Buttonnn</string>
    <string name="textvieww">textview</string>
    <string name="textview2">textview2</string>
    <string name="start">START</string>
    <string name="quiz">QUIZ</string>
    <string name="todoO">TODO</string>
    <string name="todooooo">TODO</string>
    <string name="tododfnjdg">TODO</string>
    <string name="tododsff">TODO</string>
    <string name="best_of_luck">Best of Luck!</string>
</resources>
